data/derived/fa15/progs/unify/prog3845.ml.out
Characters 29-113:
  buildThresh(buildX(),buildY(),buildSine(buildX()),buildTangent(buildX()),buildCosine(buildY()));;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd * 'e
       but an expression was expected of type expr * expr * expr * expr
